{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 757,
  "lineage": "88922414-b0b3-1716-b56b-40f81cc1e6a3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:235494813694:internet-gateway/igw-03393b55cce111cf3",
            "id": "igw-03393b55cce111cf3",
            "owner_id": "235494813694",
            "tags": {
              "Name": "new-vpc-igw"
            },
            "tags_all": {
              "Name": "new-vpc-igw"
            },
            "vpc_id": "vpc-012c5658e2c59eaa3"
          },
          "dependencies": [
            "aws_vpc.new-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "new_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:235494813694:route-table/rtb-0e94170533d40fec1",
            "id": "rtb-0e94170533d40fec1",
            "owner_id": "235494813694",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03393b55cce111cf3",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "new-route-table"
            },
            "tags_all": {
              "Name": "new-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-012c5658e2c59eaa3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.new-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-078571c209c87026e",
            "route_table_id": "rtb-0e94170533d40fec1",
            "subnet_id": "subnet-0d947c92007aede84"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.new_rt",
            "aws_subnet.public",
            "aws_vpc.new-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09074c29b05734424",
            "route_table_id": "rtb-0e94170533d40fec1",
            "subnet_id": "subnet-0400a0d5398bedf7c"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.new_rt",
            "aws_subnet.public",
            "aws_vpc.new-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b6abe69ef3f3d7e8",
            "route_table_id": "rtb-0e94170533d40fec1",
            "subnet_id": "subnet-0d941b4994747e239"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.new_rt",
            "aws_subnet.public",
            "aws_vpc.new-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "demo-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:235494813694:security-group/sg-0bc49975450538b14",
            "description": "Allow inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bc49975450538b14",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ApacheTomcat",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "allow tomcat traffic",
            "name_prefix": "",
            "owner_id": "235494813694",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "demo-sg",
              "Terraform": "True"
            },
            "tags_all": {
              "Name": "demo-sg",
              "Terraform": "True"
            },
            "timeouts": null,
            "vpc_id": "vpc-012c5658e2c59eaa3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.new-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:235494813694:subnet/subnet-0d947c92007aede84",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.2.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d947c92007aede84",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "235494813694",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Pub-subnet-1",
              "Terraform": "True"
            },
            "tags_all": {
              "Name": "Pub-subnet-1",
              "Terraform": "True"
            },
            "vpc_id": "vpc-012c5658e2c59eaa3"
          },
          "dependencies": [
            "aws_vpc.new-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:235494813694:subnet/subnet-0400a0d5398bedf7c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.2.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0400a0d5398bedf7c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "235494813694",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Pub-subnet-2",
              "Terraform": "True"
            },
            "tags_all": {
              "Name": "Pub-subnet-2",
              "Terraform": "True"
            },
            "vpc_id": "vpc-012c5658e2c59eaa3"
          },
          "dependencies": [
            "aws_vpc.new-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:235494813694:subnet/subnet-0d941b4994747e239",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.2.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d941b4994747e239",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "235494813694",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Pub-subnet-3",
              "Terraform": "True"
            },
            "tags_all": {
              "Name": "Pub-subnet-3",
              "Terraform": "True"
            },
            "vpc_id": "vpc-012c5658e2c59eaa3"
          },
          "dependencies": [
            "aws_vpc.new-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "new-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:235494813694:vpc/vpc-012c5658e2c59eaa3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.2.0.0/16",
            "default_network_acl_id": "acl-0e79a9662975f9f3a",
            "default_route_table_id": "rtb-097b30145f9424648",
            "default_security_group_id": "sg-065717d4c80e7068b",
            "dhcp_options_id": "dopt-0f020aa4cd319d724",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-012c5658e2c59eaa3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-097b30145f9424648",
            "owner_id": "235494813694",
            "tags": {
              "Name": "new-vpc",
              "Terraform": "True"
            },
            "tags_all": {
              "Name": "new-vpc",
              "Terraform": "True"
            }
          }
        }
      ]
    }
  ]
}